--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                 <div class="card bg-warning">
                   <div class="card-body text-center">
                     <p class="card-text">Showtimes</p>
+                      <form id="addzipcode" class="button-size">
+                        <textarea type="text" name="zipcode"></textarea>
+                        <button type="submit">Enter Zipcode</button>
+                      </form>
                   </div>
                 </div>
                 <div class="card bg-success">
