--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <input name="lastname" type="text" />
                             <br><label for="password">Password</label>
                             <input name="password" type="password" />
-                            <br><input class="btn" type="submit" value="Sign Up" />
+                            <br><input id="btn" class="btn" type="submit" value="Sign Up" />
                         </form>  
                             </div>
                             <div class="modal-footer">
