--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                       <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <!-- <a class="nav-link" href="#">Sign up</a> -->
+                      <!-- <a class="nav-link" href="#">Sign up</a>
                       <button type="button" class="btn btn-success btn" data-toggle="modal" data-target="#myModal">Sign Up</button>
 
                       <!-- Modal -->
@@ -42,11 +42,7 @@
                             <input name="lastname" type="text" />
                             <br><label for="password">Password</label>
                             <input name="password" type="password" />
-<<<<<<< HEAD
-                            <br><input id="btn" class="btn" type="submit" value="Sign Up" />
-=======
                             <br><input class="btn btn-info" type="submit" value="Sign Up" />
->>>>>>> 9adadde8aae53b68215ae6534552c7c3f68ed7d3
                         </form>  
                             </div>
                             <div class="modal-footer">
@@ -182,4 +178,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-</html>
+</html> -->
